# tpRigToolkit-dccs-maya

./: .travis.yml  README.md  README.rst  requirements.txt  setup.cfg  setup.py
tests/: test_general.py
tpRigToolkit/dccs/maya/: __logging__.ini  __version__.py  loader.py  register.py
tpRigToolkit/dccs/maya/core/: control.py  curve.py  flexiplane.py  joint.py  musclespline.py
tpRigToolkit/dccs/maya/data/: attributes.py  blendshape.py  controlattributes.py  controlcolor.py  controlcv.py  controlrotateorder.py  mayaascii.py  skincluster.py
tpRigToolkit/dccs/maya/metarig/components/: attach.py  buffer.py  fkchain.py  fkcurl.py  fkcurvechain.py  fksplineik.py  footroll.py  ikchain.py  joint.py  musclespline.py  nurbsribbon.py  reversefootroll.py  splineikcluster.py  splineikribbon.py  splineikribbonfkchain.py  splineikskin.py  splineikstretch.py
tpRigToolkit/dccs/maya/metarig/core/: character.py  cluster.py  component.py  control.py  mixin.py  module.py  utils.py
tpRigToolkit/dccs/maya/metarig/modules/: fkarm.py  fkleg.py  fkrig.py  fkspine.py  godrig.py  groundrig.py  ikarm.py  ikleg.py  iklimbrig.py  jointreversefootrig.py  neckrig.py  rollfootrig.py  rootrig.py  spineribbonrig.py  spinesplineikrig.py  spinesplineikskinrig.py
