[metadata]
name = tpRigToolkit-dccs-maya
description = Maya libraries for tpRigToolkit
long_description = file: README.rst
long_description_content_type = text/x-rst
version = attr: tpRigToolkit.dccs.maya.__version__.__version__
license = MIT
license_file = LICENSE
author = Tomas Poveda
author_email = tpovedatd@gmail.com
url = https://github.com/tpRigToolkit/tpRigToolkit-dccs-maya

[options]
zip_safe = false
include_package_data = true
packages=find:
install_requires=
    pytest
    pytest-cov
    coveralls
    sphinx
    sphinx_rtd_theme
    tpDcc-libs-python
    tpDcc-core
    tpDcc-libs-qt
    tpDcc-dccs-maya

[options.extras_require]
dev =
    wheel

test =
    pytest

[bdist_wheel]
universal=1